# zoomcamp

01-docker-sql/: .gitignore
01-docker-sql/data-ingestion/: data-ingestion.md
01-docker-sql/pipeline/: Dockerfile  README.md  cli_ingest.py  ingest_data.py  notebook.ipynb  pipeline.py  pyproject.toml
01-docker-sql/test/: list_files.py
