[project]
name = "pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas>=3.0.1",
    "pyarrow>=23.0.1",
    "sqlalchemy>=2.0.38",
    "psycopg[binary,pool]>=3.2.5",
    "tqdm>=4.67.3",
    "click>=8.1.8",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "pgcli>=4.1.0",
]
